add command /tel and /iccid for issuing information on SIM cards

--- a/help.html
+++ b/help.html
@@ -4,3 +4,8 @@
 - /start – начало работы с ботом
 - /help – вызов справки
 - /coord – по заданным координатам выдает ближайшее опорное оборудование в радиусе <b>500 метров</b>. Формат команды: <code>/coord 55.706792, 37.625540</code>. Бот принимает координаты в пределах <b>Московской области</b>.
+- /tel – выводит информацию о sim карте по номеру телефона. Формат команды: <code>/tel 79250012194</code>
+- /iccid – выводит информацию по sim карте по номеру sim карты – iccid (нанесенный на sim кату номер, содержащий 17-20 цифр в зависимости от оператора связи). Формат команды: <code>/iccid 89701010050357107028</code>. Примеры команд для разных операторов связи:
+<code>МТС (20 цифр) - /iccid 89701010050357107028</code>
+<code>Мегафон (17 цифр) - /iccid 89701026275366365</code>
+<code>Билайн (19 цифр) - /iccid 8970199120901329444</code>
