--- a/help.html
+++ b/help.html
@@ -9,3 +9,6 @@
 <code>МТС (20 цифр) - /iccid 89701010050357107028</code>
 <code>Мегафон (17 цифр) - /iccid 89701026275366365</code>
 <code>Билайн (19 цифр) - /iccid 8970199120901329444</code>
+- /imsi – выводит информацию по sim карте по номеру sim карты
+- /msisdn – выводит информацию о sim карте по номеру телефона
+- обработка входящего файла эксель с названием первой колонки iccid или msisdn
