--- a/help.html
+++ b/help.html
@@ -11,4 +11,4 @@
 <code>Билайн (19 цифр) - /iccid 8970199120901329444</code>
 - /imsi – выводит информацию по sim карте по номеру sim карты
 - /msisdn – выводит информацию о sim карте по номеру телефона
-- обработка входящего файла эксель с названием первой колонки iccid или msisdn
+- обработка входящего файла эксель с названием первой колонки iccid, imsi, tel или msisdn
