--- a/help.html
+++ b/help.html
@@ -12,3 +12,5 @@
 - /imsi – выводит информацию по sim карте по номеру sim карты
 - /msisdn – выводит информацию о sim карте по номеру телефона
 - обработка входящего файла эксель с названием первой колонки ip, iccid, imsi, tel или msisdn
+- /meter - команда по добавлению монтажа ПУ
+- /emeter user@example.com - команда по отправке всех монтажей из БД бота (Замените user@example.com на email куда надо отправить монтаж!!!)
