--- a/help.html
+++ b/help.html
@@ -11,6 +11,7 @@
 <code>Билайн (19 цифр) - /iccid 8970199120901329444</code>
 - /imsi – выводит информацию по sim карте по номеру sim карты
 - /msisdn – выводит информацию о sim карте по номеру телефона
-- обработка входящего файла эксель с названием первой колонки ip, iccid, imsi, tel или msisdn
+- обработка входящего файла эксель с названием первой колонки ip, ips, iccid, imsi, tel или msisdn
+( по ips работает с simcards, по ip c sims)
 - /meter - команда по добавлению монтажа ПУ
 - /emeter user@example.com - команда по отправке всех монтажей из БД бота (Замените user@example.com на email куда надо отправить монтаж!!!)
