--- a/help.html
+++ b/help.html
@@ -9,9 +9,10 @@
 <code>МТС (20 цифр) - /iccid 89701010050357107028</code>
 <code>Мегафон (17 цифр) - /iccid 89701026275366365</code>
 <code>Билайн (19 цифр) - /iccid 8970199120901329444</code>
-- /imsi – выводит информацию по sim карте по номеру sim карты
+- /imsi – выводит информацию о sim карте по номеру sim карты
 - /msisdn – выводит информацию о sim карте по номеру телефона
+- /ip - выводит информацию о sim карте из таблицы sims по ip
+- /ips - выводит информацию о sim карте из таблицы simcards по ip
 - обработка входящего файла эксель с названием первой колонки ip, ips, iccid, imsi, tel или msisdn
-( по ips работает с simcards, по ip c sims)
 - /meter - команда по добавлению монтажа ПУ
 - /emeter user@example.com - команда по отправке всех монтажей из БД бота (Замените user@example.com на email куда надо отправить монтаж!!!)
